--- a/ansible/roles/gluu-server/templates/opt/gluu/install/community-edition-setup/setup.properties.j2
+++ b/ansible/roles/gluu-server/templates/opt/gluu/install/community-edition-setup/setup.properties.j2
@@ -31,6 +31,9 @@ orgName={{ cert_org_name }}
 countryCode={{ cert_country_code}}                                                                                                                                       
 city={{ cert_city }}
 state={{ cert_state }}
+
+### Install Shibboleth SAML IdP
+installSaml=True
                                                                                                                                                      
 ## Do NOT modify below this part unless you know what you're doing                                                                                   
                                                                                                                                                      
